--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 <body>
     <header>Cantinho Pet</header>
     <img src="mllhmwhorrma1 1.png">
+    <ul>Quem somos</ul>
+    <ul>Quero adotar</ul>
+    <ul>Quero ajudar</ul>
+    <ul>Parcerias</ul>
+    <ul>blog</ul>
+    <ul>Entrar</ul>
+    <ul>Cadastre-se</ul>
 </header>
+
 </body>
 </html>
