--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <ul>blog</ul>
     <ul>Entrar</ul>
     <ul>Cadastre-se</ul>
+    <ul>Quero adotar</ul>
+    <ul>Quero divulgar um animal</ul>
+    <p>adote!</p>
+    <p>Dê um novo começo a um amigo de quatro patas. Adote, e transforme a vida de um animal para sempre.</p>
+    <
 </header>
 
 </body>
