--- a/index.html
+++ b/index.html
@@ -15,12 +15,60 @@
     <ul>blog</ul>
     <ul>Entrar</ul>
     <ul>Cadastre-se</ul>
+    </header>
+
     <ul>Quero adotar</ul>
     <ul>Quero divulgar um animal</ul>
-    <p>adote!</p>
+    <h1>adote!</h1>
     <p>Dê um novo começo a um amigo de quatro patas. Adote, e transforme a vida de um animal para sempre.</p>
-    <
-</header>
+    <img src="images (1) 1.png" alt="">
+    <h1>Thomas</h1>
+<p>Londrina,pr</p>
+<img src="a639ad40c8276f2aa33ccaad66be17d06d9d1126r1-1535-2047v2_00.png" alt="">
+<h1>Yotan</h1>
+<p>São paulo,Sp</p>
+<img src="Cat Medley_ Cuteness Galore, Funnies, Rescues, And Appreciation.png" alt="">
+<h1>Akira</h1>
+<p>Salvador,bh</p>
+<img src="Linda Filhote Mix de Pitbull para Adoção no Rio de Janeiro 1 (1).png" alt="">
+<h1>Nutela</h1>
+<p>Ji-parana,ro</p>
+<img src="filhote-de-gato-cuidados 1.png" alt="">
+<h1>Bertila</h1>
+<p>Curitiba,pr</p>
+<img src="image-202 1.png" alt="">
+<h1>Laila</h1>
+<p>Manaus,Am</p>
+<img src="Doa-se filhotes de gatos - Cotia_SP.png" alt="">
+<h1>fifi</h1>
+<p>Curitiba,pr</p>
+<img src="Lindos gatinhos para adoção com 60 dias - Osasco_SP.png" alt="">
+<h1>Luna</h1>
+<p>Cascavei,pr</p>
+
+<u>Ver mais</u>
+
+<h1>Por que Adotar?</h1>
+<img src="adoption-clipart-cartoon-cartoon-character-family-with-pets-illustration-vector_562144_wh860-removebg-preview 1.png" alt="">
+<p>Neste exato momento, existem milhares de cães e gatos em abrigos, aguardando uma chance de serem amados...</p>
+<p>...e você tem o poder de mudar o destino de um deles ao escolher adotar.</p>
+<img src="7444933-adote-um-cachorro-ajude-os-animais-sem-teto-encontre-um-cartoo-em-casa-ilustracaoial-vetor-removebg-preview 1.png" alt="">
+
+<ul>Encontrar um novo Amigo</ul>
+
+<h1>Nosso Blog</h1>
+<P>Veja nossas últimas dicas sobre cuidados com seu pet</P>
+
+<img src="1-adocao 1.png" alt="">
+<UL>Como Apoiar ONGs e Abrigos de Animais.</UL>
+<p>Adotar um pet é uma maneira incrível de apoiar a causa dos animais, mas você também pode fazer mais. Existem diversas formas de ajudar os abrigos e ONGs de animais, além </p>
+<ul>ler mais</ul>
+
+<img src="cursar-medicina-veterinaria 1.png" alt="">
+<ul>Celebrando o Dia Nacional do Veterinário com uma entrevista especial.</ul>
+<p>No dia 09 de Setembro, nós celebramos o Dia Nacional do Médico Veterinário. Para nós aqui no Amigo Não se Compra esta é uma data muito importante, por isso,</p>
+<ul>Ler mais</ul>
+
 
 </body>
 </html>
