--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 </head>
 <body>
     <header>Cantinho Pet</header>
-    <img src="mllhmwhorrma1 1.png">
     <ul>Quem somos</ul>
     <ul>Quero adotar</ul>
     <ul>Quero ajudar</ul>
@@ -15,6 +14,7 @@
     <ul>blog</ul>
     <ul>Entrar</ul>
     <ul>Cadastre-se</ul>
+    <img src="mllhmwhorrma1 1.png" alt="">
     </header>
 
     <ul>Quero adotar</ul>
@@ -69,6 +69,24 @@
 <p>No dia 09 de Setembro, nós celebramos o Dia Nacional do Médico Veterinário. Para nós aqui no Amigo Não se Compra esta é uma data muito importante, por isso,</p>
 <ul>Ler mais</ul>
 
+<img src="anos-vive-gato-01 1 (1).png" alt="">
+<ul>Conheça as datas comemorativas dos gatos.</ul>
+<p>Os gatos são sem dúvidas alguma um dos bichinhos mais irresistíveis desse planeta e quem discorda está errado, sim!</p>
+<ul>Ler mais</ul>
 
+<img src="como-se-proteger-de-golpes-digitais-veja-essas-importantes-dicas-scaled 1.png" alt="">
+<ul>Como se proteger de golpes envolvendo adoção de animais.</ul>
+<p> Como vocês sabem, o Cantinho Pet é uma plataforma de adoção de animais. Ou seja: nós conectamos cães e gatos que estão nos abrigos de todo o</p>
+<ul>Ler mais</ul>
+
+<ul>Ver todas as dicas</ul>
+<ul>ADOTE</ul>
+<p>Adote com responsabilidade</p>
+<ul>COLABORE</ul>
+<p>Seja uma Empresa Parceira</p>
+<ul>DIVULGUE UM ANIMAL</ul>
+<p>Cadastrar animal</p>
+<ul>SOBRE NÓS</ul>
+<p>Termo de Uso e Política de Privacidade</p>
 </body>
 </html>
