--- a/index.html
+++ b/index.html
@@ -1,21 +1,15 @@
 <!DOCTYPE html>
-<html lang="pt_br">
+<html lang="pt-br"
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cantinho Pet</title>
-</head>
-<body>
-    <header>Cantinho Pet</header>
-    <ul>Quem somos</ul>
-    <ul>Quero adotar</ul>
-    <ul>Quero ajudar</ul>
+    <ul>Cantinho Pet</ul>
+    <ul>Quem Somos</ul>
+    <ul>Quero Adotar</ul>
     <ul>Parcerias</ul>
-    <ul>blog</ul>
+    <ul>Blog</ul>
     <ul>Entrar</ul>
     <ul>Cadastre-se</ul>
     <img src="mllhmwhorrma1 1.png" alt="">
-    </header>
+</head>
 
     <ul>Quero adotar</ul>
     <ul>Quero divulgar um animal</ul>
