--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <ul>Blog</ul>
     <ul>Entrar</ul>
     <ul>Cadastre-se</ul>
-    <img src="mllhmwhorrma1 1.png" alt="">
+    <img id="patas" src="mllhmwhorrma1 1.png" alt="">
 </head>
     <ul>Quero adotar</ul>
     <ul>Quero divulgar um animal</ul>
