--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br"
 <head>
     <ul>Cantinho Pet</ul>
+    <img id=pata src="images-removebg-preview 1.png" alt="">
     <ul>Quem Somos</ul>
     <ul>Quero Adotar</ul>
     <ul>Parcerias</ul>
@@ -14,28 +15,28 @@
     <ul>Quero divulgar um animal</ul>
     <h1>adote!</h1>
     <p>Dê um novo começo a um amigo de quatro patas. Adote, e transforme a vida de um animal para sempre.</p>
-    <img src="images (1) 1.png" alt="">
+    <img id=Passaro src="images (1) 1.png" alt="">
     <h1>Thomas</h1>
 <p>Londrina,pr</p>
-<img src="a639ad40c8276f2aa33ccaad66be17d06d9d1126r1-1535-2047v2_00.png" alt="">
+<img id=tae src="a639ad40c8276f2aa33ccaad66be17d06d9d1126r1-1535-2047v2_00.png" alt="">
 <h1>Yotan</h1>
 <p>São paulo,Sp</p>
-<img src="Cat Medley_ Cuteness Galore, Funnies, Rescues, And Appreciation.png" alt="">
+<img id=Gato src="Cat Medley_ Cuteness Galore, Funnies, Rescues, And Appreciation.png" alt="">
 <h1>Akira</h1>
 <p>Salvador,bh</p>
-<img src="Linda Filhote Mix de Pitbull para Adoção no Rio de Janeiro 1 (1).png" alt="">
+<img id=dog src="Linda Filhote Mix de Pitbull para Adoção no Rio de Janeiro 1 (1).png" alt="">
 <h1>Nutela</h1>
 <p>Ji-parana,ro</p>
-<img src="filhote-de-gato-cuidados 1.png" alt="">
+<img id=cat src="filhote-de-gato-cuidados 1.png" alt="">
 <h1>Bertila</h1>
 <p>Curitiba,pr</p>
-<img src="image-202 1.png" alt="">
+<img id=laila src="image-202 1.png" alt="">
 <h1>Laila</h1>
 <p>Manaus,Am</p>
-<img src="Doa-se filhotes de gatos - Cotia_SP.png" alt="">
+<img id=fifi src="Doa-se filhotes de gatos - Cotia_SP.png" alt="">
 <h1>fifi</h1>
 <p>Curitiba,pr</p>
-<img src="Lindos gatinhos para adoção com 60 dias - Osasco_SP.png" alt="">
+<img id=luna src="Lindos gatinhos para adoção com 60 dias - Osasco_SP.png" alt="">
 <h1>Luna</h1>
 <p>Cascavei,pr</p>
 
