--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br"
 <head>
-    <ul>Cantinho Pet</ul>
+    <ul>Cantinho Pet</ul> <img src="images-removebg-preview 1.png" alt="">
     <img id=pata src="images-removebg-preview 1.png" alt="">
     <ul>Quem Somos</ul>
     <ul>Quero Adotar</ul>
