--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, inicial-scale=1.0">
     <title>Cantinho Pet</title>
 </head>
-<boby>
+<body>
     <header>Cantinho Pet
         <img src="images-removebg-preview 1.png" alt="">
     </header>
-    <img id="pata" src="images-removebg-preview 1.png" alt="">
     <ul>Quem Somos</ul>
     <ul>Quero Adotar</ul>
     <ul>Parcerias</ul>
