--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="pt-br"
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8"
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, inicial-scale=1.0">
     <title>Cantinho Pet</title>
 </head>
 <body>
     <header>Cantinho Pet
-        <img src="images-removebg-preview 1.png" alt="">
+        <img src="images-removebg-preview 1.png">
     </header>
     <ul>Quem Somos</ul>
     <ul>Quero Adotar</ul>
@@ -16,65 +16,65 @@
     <ul>Blog</ul>
     <ul>Entrar</ul>
     <ul>Cadastre-se</ul>
-    <img id="patas" src="mllhmwhorrma1 1.png" alt="">
+    <img id="patas" src="mllhmwhorrma1 1.png">
     <ul>Quero adotar</ul>
     <ul>Quero divulgar um animal</ul>
     <h1>adote!</h1>
     <p>Dê um novo começo a um amigo de quatro patas. Adote, e transforme a vida de um animal para sempre.</p>
-    <img id="Passaro" src="images (1) 1.png" alt="">
+    <img id="Passaro" src="images (1) 1.png">
     <h1>Thomas</h1>
 <p>Londrina,pr</p>
-<img id="tae" src="a639ad40c8276f2aa33ccaad66be17d06d9d1126r1-1535-2047v2_00.png" alt="">
+<img id="tae" src="a639ad40c8276f2aa33ccaad66be17d06d9d1126r1-1535-2047v2_00.png">
 <h1>Yotan</h1>
 <p>São paulo,Sp</p>
-<img id="Gato" src="Cat Medley_ Cuteness Galore, Funnies, Rescues, And Appreciation.png" alt="">
+<img id="Gato" src="Cat Medley_ Cuteness Galore, Funnies, Rescues, And Appreciation.png">
 <h1>Akira</h1>
 <p>Salvador,bh</p>
-<img id="dog" src="Linda Filhote Mix de Pitbull para Adoção no Rio de Janeiro 1 (1).png" alt="">
+<img id="dog" src="Linda Filhote Mix de Pitbull para Adoção no Rio de Janeiro 1 (1).png">
 <h1>Nutela</h1>
 <p>Ji-parana,ro</p>
-<img id="cat" src="filhote-de-gato-cuidados 1.png" alt="">
+<img id="cat" src="filhote-de-gato-cuidados 1.png">
 <h1>Bertila</h1>
 <p>Curitiba,pr</p>
-<img id="laila" src="image-202 1.png" alt="">
+<img id="laila" src="image-202 1.png">
 <h1>Laila</h1>
 <p>Manaus,Am</p>
-<img id="fifi" src="Doa-se filhotes de gatos - Cotia_SP.png" alt="">
+<img id="fifi" src="Doa-se filhotes de gatos - Cotia_SP.png">
 <h1>fifi</h1>
 <p>Curitiba,pr</p>
-<img id="luna" src="Lindos gatinhos para adoção com 60 dias - Osasco_SP.png" alt="">
+<img id="luna" src="Lindos gatinhos para adoção com 60 dias - Osasco_SP.png">
 <h1>Luna</h1>
 <p>Cascavei,pr</p>
 
 <u>Ver mais</u>
 
 <h1>Por que Adotar?</h1>
-<img id="adoção" src="adoption-clipart-cartoon-cartoon-character-family-with-pets-illustration-vector_562144_wh860-removebg-preview 1.png" alt="">
+<img id="adoção" src="adoption-clipart-cartoon-cartoon-character-family-with-pets-illustration-vector_562144_wh860-removebg-preview 1.png">
 <p>Neste exato momento, existem milhares de cães e gatos em abrigos, aguardando uma chance de serem amados...</p>
 <p>...e você tem o poder de mudar o destino de um deles ao escolher adotar.</p>
-<img id="ajude" src="7444933-adote-um-cachorro-ajude-os-animais-sem-teto-encontre-um-cartoo-em-casa-ilustracaoial-vetor-removebg-preview 1.png" alt="">
+<img id="ajude" src="7444933-adote-um-cachorro-ajude-os-animais-sem-teto-encontre-um-cartoo-em-casa-ilustracaoial-vetor-removebg-preview 1.png">
 
 <ul>Encontrar um novo Amigo</ul>
 
 <h1>Nosso Blog</h1>
 <P>Veja nossas últimas dicas sobre cuidados com seu pet</P>
 
-<img id="adoc1" src="1-adocao 1.png" alt="">
+<img id="adoc1" src="1-adocao 1.png">
 <UL>Como Apoiar ONGs e Abrigos de Animais.</UL>
 <p>Adotar um pet é uma maneira incrível de apoiar a causa dos animais, mas você também pode fazer mais. Existem diversas formas de ajudar os abrigos e ONGs de animais, além </p>
 <ul>ler mais</ul>
 
-<img id="med" src="cursar-medicina-veterinaria 1.png" alt="">
+<img id="med" src="cursar-medicina-veterinaria 1.png">
 <ul>Celebrando o Dia Nacional do Veterinário com uma entrevista especial.</ul>
 <p>No dia 09 de Setembro, nós celebramos o Dia Nacional do Médico Veterinário. Para nós aqui no Amigo Não se Compra esta é uma data muito importante, por isso,</p>
 <ul>Ler mais</ul>
 
-<img id="vive" src="anos-vive-gato-01 1 (1).png" alt="">
+<img id="vive" src="anos-vive-gato-01 1 (1).png">
 <ul>Conheça as datas comemorativas dos gatos.</ul>
 <p>Os gatos são sem dúvidas alguma um dos bichinhos mais irresistíveis desse planeta e quem discorda está errado, sim!</p>
 <ul>Ler mais</ul>
 
-<img id="golpes" src="como-se-proteger-de-golpes-digitais-veja-essas-importantes-dicas-scaled 1.png" alt="">
+<img id="golpes" src="como-se-proteger-de-golpes-digitais-veja-essas-importantes-dicas-scaled 1.png">
 <ul>Como se proteger de golpes envolvendo adoção de animais.</ul>
 <p> Como vocês sabem, o Cantinho Pet é uma plataforma de adoção de animais. Ou seja: nós conectamos cães e gatos que estão nos abrigos de todo o</p>
 <ul>Ler mais</ul>
