--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>Cantinho Pet
-        <img src="images-removebg-preview 1.png">
+        <img id="p" src="images-removebg-preview 1.png">
     </header>
     <ul>Quem Somos</ul>
     <ul>Quero Adotar</ul>
